--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
                 </div>
 
                 <div class="chat-friends">
-                    <div class="friend p-2 d-flex justify-content-between" v-for="(contact, index) in contacts"
-                        :key="contact.id">
+                    <div div class="friend p-2 d-flex justify-content-between"
+                    v-for="(contact, index) in contacts"
+                    :key="contact.id"
+                    @click="selectContact(index)">
 
                         <div class="d-flex justify-content-center align-items-center gap-2">
                             <img :src="contact.avatar" :alt="contact.name">
@@ -77,41 +79,37 @@
             <!-- Message -->
             <div class="message">
                 <div class="user d-flex justify-content-between">
-                    <div class="d-flex gap-2 align-items-center">
-                        <div>
-                            <i class="fa-solid fa-arrow-left"></i>
-                        </div>
-                        <div>
-                            <img src="./img/avatar_1.jpg" alt="">
-                        </div>
-
-                        <div>
-                            <span>Anas</span>
-                            <p class="ah-small text-secondary">Ultimo accesso oggi alle 12.00</p>
-                        </div>
+                  <div class="d-flex gap-2 align-items-center">
+                    <div>
+                      <i class="fa-solid fa-arrow-left"></i>
                     </div>
-
-                    <div class="d-flex align-items-center">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                        <i class="fa-solid fa-paperclip"></i>
-                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                    <div>
+                      <img :src="contacts[selectContactindex].avatar" alt="">
                     </div>
+                    <div>
+                      <span>{{contacts[selectContactindex].name}}</span>
+                      <p class="ah-small text-secondary">Ultimo accesso oggi alle 12.00</p>
+                    </div>
+                  </div>
+                  <div class="d-flex align-items-center">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <i class="fa-solid fa-paperclip"></i>
+                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                  </div>
                 </div>
                 <div class="message-area p-5">
-
+                  <!-- visualizza i messaggi del contatto selezionato -->
                 </div>
                 <div class="write-message d-flex align-items-center justify-content-between px-3">
-                    <i class="fa-regular fa-face-smile"></i>
-                    <input type="text" class="form-control mx-4" id="userMessage" name="userMessage"
-                        placeholder="Scrivi un messaggio">
-                    <i class="fa-solid fa-microphone"></i>
+                  <i class="fa-regular fa-face-smile"></i>
+                  <input type="text" class="form-control mx-4" id="userMessage" name="userMessage"
+                         placeholder="Scrivi un messaggio">
+                  <i class="fa-solid fa-microphone"></i>
                 </div>
-            </div>
+              </div>
+              
         </div>
     </div>
-
-
-
 
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script type="text/javascript" src="./js/script.js"></script>
