--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  
+
   <link rel="stylesheet" href="./css/style.css">
 
   <title>esercizio</title>
@@ -97,10 +97,10 @@
           </div>
         </div>
         <div class="message-area p-5">
-          <div class="p-1 mb-2 rounded-2 d-flex gap-3"
-            v-for="(element, index) in contacts[selectContact].messages" :class="element.status">
-            <p>{{element.message}}</p>
-            <span class="ah-small mt-4">12.45</span>
+          <div class="p-1 pe-5 mb-2 rounded-2" v-for="(element, index) in contacts[selectContact].messages"
+            :class="element.status">
+            <p>{{element.message.trim()}}</p>
+            <span class="message-date ah-small text-secondary w-100">{{element.date}}</span>
           </div>
 
         </div>
@@ -116,7 +116,9 @@
   </div>
 
   <script src="https://unpkg.com/vue@3.2.47/dist/vue.global.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/luxon@3.3.0/build/global/luxon.min.js"></script>
   <script type="text/javascript" src="./js/script.js"></script>
+  <script type="text/javascript" src="./js/utility.js"></script>
 </body>
 
 </html>
