--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="./js/style.css">
   <link rel="stylesheet" href="./css/style.css">
 
   <title>esercizio</title>
@@ -50,18 +50,20 @@
         </div>
         <div class="search d-flex">
           <input type="text" class="form-control-sm m-1 w-100" id="userSearch" name="userSearch"
-            placeholder="Cerca o inizia una nuova chat">
+            placeholder="Cerca o inizia una nuova chat"
+            v-model='searchContactText' @keyup="searchContact()">
         </div>
 
         <div class="chat-friends">
           <div div class="friend p-2 d-flex justify-content-between" v-for="(contact, index) in contacts"
-            :key="contact.id" @click="selectContact = index" :class="{'selected': index === selectContact}">
+            @click="selectContact = index" :class="{'selected': index === selectContact}"
+            v-show="contact.visible">
 
             <div class="d-flex justify-content-center align-items-center gap-2">
               <img :src="contact.avatar" :alt="contact.name">
               <div>
                 <span class="fw-medium">{{contact.name}}</span>
-                <p class="ah-small text-secondary">Ultimo messaggio</p>
+                <p class="ah-small text-secondary">{{contact.message}}</p>
               </div>
 
             </div>
@@ -117,6 +119,7 @@
 
   <script src="https://unpkg.com/vue@3.2.47/dist/vue.global.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/luxon@3.3.0/build/global/luxon.min.js"></script>
+  <script type="module" src="./js/emoji-picker.js"></script>
   <script type="text/javascript" src="./js/script.js"></script>
   <script type="text/javascript" src="./js/utility.js"></script>
 </body>
