--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
 
               </div>
-              <span class="ah-small text-secondary">Ieri</span>
+              <span class="ah-small text-secondary">{{lastDate(index)}}</span>
             </div>
 
 
@@ -90,7 +90,7 @@
             </div>
             <div>
               <span>{{contacts[selectContact].name}}</span>
-              <p class="ah-small text-secondary">Ultimo accesso oggi alle 12.00</p>
+              <p class="ah-small text-secondary">{{lastDate(selectContact)}}</p>
             </div>
           </div>
           <div class="d-flex align-items-center">
